<resources>
    <string name="nexa_brand_name" translatable="false">NEXA</string>
    <string name="nexa_operations_wordmark" translatable="false">NEXA OPERATIONS</string>
    <string name="nexa_current_context_description">Contexto actual: %1$s, %2$s</string>
    <string name="nexa_context_change_description">Cambiar contexto desde %1$s, %2$s</string>
    <string name="nexa_context_choice_description">%1$s, %2$s</string>
    <string name="nexa_change_context">Cambiar contexto</string>
    <string name="nexa_actual">Actual</string>
    <string name="nexa_context_pending">Confirmando contexto</string>
    <string name="nexa_open">Abrir</string>
    <string name="nexa_search_label">Buscar producto</string>
    <string name="nexa_search_hint">Nombre, SKU o presentación</string>
    <string name="nexa_search_button">Buscar</string>
    <string name="nexa_show_more">Mostrar más</string>
    <string name="nexa_sku_label">SKU</string>
    <string name="nexa_candidate_sku">SKU: %1$s</string>
    <string name="nexa_task_row_action_description">%1$s. %2$s. Abrir tarea.</string>
    <string name="nexa_candidate_row_action_description">%1$s. Seleccionar producto.</string>
    <string name="nexa_candidate_sku_label">SKU</string>
    <string name="nexa_variant">Variante</string>
    <string name="nexa_presentation">Presentación</string>
    <string name="nexa_brand">Marca</string>
    <string name="nexa_unit">Unidad</string>
    <string name="nexa_packaging">Empaque</string>
...
